--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/42112eb55b.js" crossorigin="anonymous"></script>
     <title>Thing Desarrollo y diseño web</title>
+    <script defer src="index.js"></script>
 </head>
 <body>
     <!--Navbar-->
@@ -23,7 +24,7 @@
                 <li class="navbar-item"><a href="#contacto" class="navbar-link">Contacto</a></li>
             </ul>
             <a href="#" class="btn-contacto">@</a>
-            <button class="btn-toggle"><i class="fa-solid fa-bars-staggered"></i></i></button>
+            <button class="btn-toggle"><i class="fa-solid fa-bars"></i></button>
         </nav>
     </header>
     
