--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/42112eb55b.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <title>Thing Desarrollo y diseño web</title>
     <script defer src="index.js"></script>
 </head>
@@ -16,14 +17,14 @@
     <!--Navbar-->
     <header class="header-navbar">
         <nav class="navbar">
-            <a href="#" class="navbar-brand">Thing</a>
+            <a href="https://www.thing.com.ar/" class="navbar-brand"><img class="navbar-logo" src="img/logo.png" alt="Thing" width="85.3" height="32.9"></a>
             <ul class="navbar-list">
                 <li class="navbar-item"><a href="#inicio" class="navbar-link">Inicio</a></li>
                 <li class="navbar-item"><a href="#servicios" class="navbar-link">Servicios</a></li>
                 <li class="navbar-item"><a href="#nosotros" class="navbar-link">Nosotros</a></li>
                 <li class="navbar-item"><a href="#contacto" class="navbar-link">Contacto</a></li>
             </ul>
-            <a href="#" class="btn-contacto">@</a>
+            <h4 href="" class="btn-contacto">Contactanos</h4>
             <button class="btn-toggle"><i class="fa-solid fa-bars"></i></button>
         </nav>
     </header>
