--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/custom.css">
     <!--Scripts-->
     <script defer src="index.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <!--Otros-->
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <title>Thing Desarrollo y diseño web</title>
@@ -19,7 +21,7 @@
 <body>
 
     <!--Navbar-->
-    <header class="header">
+    <header class="container mx-auto">
         <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="https://www.thing.com.ar/">
@@ -36,9 +38,10 @@
                     <a class="nav-link" href="#contacto">Contacto</a>
                     </div>
                 </div>
-                <button class="btn btn-outline-primary btn-sm" style="font-size: 12px !important;" type="submit">Mas información aquí</button>
+                <button class="btn-contacto btn btn-outline-primary btn-sm" type="submit">Mas información aquí</button>
             </div>
         </nav>
     </header>
+
 </body>
 </html>
